@@ -6,7 +6,7 @@ import iuh.fit.goat.dto.request.blog.BlogCreateRequest;
 import iuh.fit.goat.dto.request.blog.BlogIdsRequest;
 import iuh.fit.goat.dto.request.blog.BlogUpdateRequest;
 import iuh.fit.goat.dto.request.user.LikeBlogRequest;
-import iuh.fit.goat.dto.response.StorageResponse;
+import iuh.fit.goat.dto.response.CloudinaryResponse;
 import iuh.fit.goat.dto.response.blog.BlogResponse;
 import iuh.fit.goat.dto.response.blog.BlogStatusResponse;
 import iuh.fit.goat.dto.response.ResultPaginationResponse;
@@ -21,6 +21,7 @@ import iuh.fit.goat.util.FileUploadUtil;
 import iuh.fit.goat.util.SecurityUtil;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.io.FilenameUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.data.domain.Page;
@@ -57,12 +58,17 @@ public class BlogServiceImpl implements BlogService {
     private final NotificationService notificationService;
     private final BlogRepository blogRepository;
     private final UserRepository userRepository;
-    private final StorageService storageService;
+    private final CloudinaryService cloudinaryService;
+
 
     @Override
     public Blog handleCreateBlog(BlogCreateRequest request) throws InvalidException {
         String email = SecurityUtil.getCurrentUserLogin().isPresent() ? SecurityUtil.getCurrentUserLogin().get() : "";
         User currentUser = this.userRepository.findByEmail(email);
+
+        if (currentUser == null) {
+            throw new InvalidException("User not found");
+        }
 
         // Handle file uploads
         List<String> imageUrls = new ArrayList<>();
@@ -71,7 +77,8 @@ public class BlogServiceImpl implements BlogService {
                 if (file.isEmpty()) continue;
 
                 FileUploadUtil.assertAllowed(file, FileUploadUtil.FILE_PATTERN);
-                StorageResponse response = this.storageService.handleUploadFile(file, "blogs");
+                String fileName = FileUploadUtil.getFileName(FilenameUtils.getBaseName(file.getOriginalFilename()));
+                CloudinaryResponse response = this.cloudinaryService.handleUploadFile(file, "blogs", fileName);
                 imageUrls.add(response.getUrl());
             }
         }
@@ -146,7 +153,7 @@ public class BlogServiceImpl implements BlogService {
 
     @Override
     public ResultPaginationResponse handleGetAllBlogs(Specification<Blog> spec, Pageable pageable) {
-        Page<Blog> page = this.blogRepository.findAll(spec, pageable);
+        Page<Blog> page = this.blogRepository.findAllAvailableWithAuthor(spec, pageable);
 
         ResultPaginationResponse.Meta meta = new ResultPaginationResponse.Meta();
         meta.setPage(page.getNumber() + 1);
@@ -237,7 +244,7 @@ public class BlogServiceImpl implements BlogService {
                         blog.getBlogId(),
                         blog.isEnabled()
                 )
-        ).toList();
+        ).collect(Collectors.toList());
     }
 
     @Override
@@ -266,7 +273,7 @@ public class BlogServiceImpl implements BlogService {
                         blog.getBlogId(),
                         blog.isEnabled()
                 )
-        ).toList();
+        ).collect(Collectors.toList());
     }
 
     @Override
@@ -315,6 +322,7 @@ public class BlogServiceImpl implements BlogService {
         response.setCreatedBy(blog.getCreatedBy());
         response.setUpdatedAt(blog.getUpdatedAt());
         response.setUpdatedBy(blog.getUpdatedBy());
+
         if (blog.getAuthor() != null) {
             BlogResponse.BlogAuthor author = new BlogResponse.BlogAuthor(
                     blog.getAuthor().getAccountId(),
@@ -327,10 +335,9 @@ public class BlogServiceImpl implements BlogService {
             );
             response.setAuthor(author);
         } else {
-            BlogResponse.BlogAuthor anonymous = new BlogResponse.BlogAuthor();
-            anonymous.setFullName("Tác giả ẩn danh");
-            response.setAuthor(anonymous);
+            response.setAuthor(null);
         }
+
         return response;
     }
 }
